[gd_scene load_steps=8 format=3 uid="uid://c3ee00a8amm7c"]

[ext_resource type="Script" uid="uid://l2fxjwa55mwe" path="res://addons/todo_controller/ui/todo_controller_panel.gd" id="1_17i0j"]
[ext_resource type="Texture2D" uid="uid://bt4621enrdft2" path="res://addons/todo_controller/icon/icon.png" id="2_a6d4f"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hmdan"]
bg_color = Color(0.145098, 0.145098, 0.145098, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.101961, 0.101961, 0.101961, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="LabelSettings" id="LabelSettings_hmdan"]
font_size = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_chqw5"]
bg_color = Color(0.105882, 0.105882, 0.105882, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_a6d4f"]
content_margin_left = 8.0
content_margin_right = 8.0
bg_color = Color(0.117647, 0.117647, 0.117647, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
shadow_color = Color(0, 0, 0, 0.556863)
shadow_size = 2
shadow_offset = Vector2(0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_17i0j"]
bg_color = Color(0.117647, 0.117647, 0.117647, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[node name="TodoControllerPanel" type="TabContainer"]
offset_right = 800.0
offset_bottom = 300.0
current_tab = 1
script = ExtResource("1_17i0j")

[node name="AnnotationPanelContainer" type="PanelContainer" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 2
metadata/_tab_index = 0
metadata/_tab_name = "TODO管理器"

[node name="MarginContainer" type="MarginContainer" parent="AnnotationPanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = -2
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = -2

[node name="HSplitContainer" type="HSplitContainer" parent="AnnotationPanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = -2
theme_override_constants/autohide = 1

[node name="ScrpitListHSplit" type="HSplitContainer" parent="AnnotationPanelContainer/MarginContainer/HSplitContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = -2
theme_override_constants/autohide = 1
split_offset = 351

[node name="ScriptPanel" type="PanelContainer" parent="AnnotationPanelContainer/MarginContainer/HSplitContainer/ScrpitListHSplit"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_hmdan")

[node name="MarginContainer" type="MarginContainer" parent="AnnotationPanelContainer/MarginContainer/HSplitContainer/ScrpitListHSplit/ScriptPanel"]
layout_mode = 2
theme_override_constants/margin_bottom = 4

[node name="VBoxContainer" type="VBoxContainer" parent="AnnotationPanelContainer/MarginContainer/HSplitContainer/ScrpitListHSplit/ScriptPanel/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="AnnotationPanelContainer/MarginContainer/HSplitContainer/ScrpitListHSplit/ScriptPanel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="IconTexture" type="TextureRect" parent="AnnotationPanelContainer/MarginContainer/HSplitContainer/ScrpitListHSplit/ScriptPanel/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(36, 36)
layout_mode = 2
size_flags_vertical = 8
texture = ExtResource("2_a6d4f")
expand_mode = 1
stretch_mode = 5

[node name="TitleLabel" type="Label" parent="AnnotationPanelContainer/MarginContainer/HSplitContainer/ScrpitListHSplit/ScriptPanel/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "脚本列表"
label_settings = SubResource("LabelSettings_hmdan")
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="AnnotationPanelContainer/MarginContainer/HSplitContainer/ScrpitListHSplit/ScriptPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 4
theme_override_constants/margin_right = 4

[node name="PanelContainer" type="PanelContainer" parent="AnnotationPanelContainer/MarginContainer/HSplitContainer/ScrpitListHSplit/ScriptPanel/MarginContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_chqw5")

[node name="ScrollContainer" type="ScrollContainer" parent="AnnotationPanelContainer/MarginContainer/HSplitContainer/ScrpitListHSplit/ScriptPanel/MarginContainer/VBoxContainer/MarginContainer/PanelContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="TreeVBox" type="VBoxContainer" parent="AnnotationPanelContainer/MarginContainer/HSplitContainer/ScrpitListHSplit/ScriptPanel/MarginContainer/VBoxContainer/MarginContainer/PanelContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="StarScriptTree" type="Tree" parent="AnnotationPanelContainer/MarginContainer/HSplitContainer/ScrpitListHSplit/ScriptPanel/MarginContainer/VBoxContainer/MarginContainer/PanelContainer/ScrollContainer/TreeVBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 4
mouse_filter = 2
allow_reselect = true
allow_rmb_select = true
scroll_horizontal_enabled = false
scroll_vertical_enabled = false

[node name="ScriptTree" type="Tree" parent="AnnotationPanelContainer/MarginContainer/HSplitContainer/ScrpitListHSplit/ScriptPanel/MarginContainer/VBoxContainer/MarginContainer/PanelContainer/ScrollContainer/TreeVBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 4
allow_reselect = true
allow_rmb_select = true
scroll_horizontal_enabled = false
scroll_vertical_enabled = false

[node name="PanelContainer2" type="PanelContainer" parent="AnnotationPanelContainer/MarginContainer/HSplitContainer/ScrpitListHSplit"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_hmdan")

[node name="MarginContainer" type="MarginContainer" parent="AnnotationPanelContainer/MarginContainer/HSplitContainer/ScrpitListHSplit/PanelContainer2"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 4

[node name="VBoxContainer" type="VBoxContainer" parent="AnnotationPanelContainer/MarginContainer/HSplitContainer/ScrpitListHSplit/PanelContainer2/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="AnnotationPanelContainer/MarginContainer/HSplitContainer/ScrpitListHSplit/PanelContainer2/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ScratchEdit" type="LineEdit" parent="AnnotationPanelContainer/MarginContainer/HSplitContainer/ScrpitListHSplit/PanelContainer2/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 36)
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/normal = SubResource("StyleBoxFlat_a6d4f")
placeholder_text = "请输入要搜索的内容"
clear_button_enabled = true

[node name="CaseSensitiveButton" type="CheckButton" parent="AnnotationPanelContainer/MarginContainer/HSplitContainer/ScrpitListHSplit/PanelContainer2/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "区分大小写"

[node name="PanelContainer" type="PanelContainer" parent="AnnotationPanelContainer/MarginContainer/HSplitContainer/ScrpitListHSplit/PanelContainer2/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_17i0j")

[node name="MarginContainer" type="MarginContainer" parent="AnnotationPanelContainer/MarginContainer/HSplitContainer/ScrpitListHSplit/PanelContainer2/MarginContainer/VBoxContainer/PanelContainer"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="AnnotationPanelContainer/MarginContainer/HSplitContainer/ScrpitListHSplit/PanelContainer2/MarginContainer/VBoxContainer/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="AnnotationCodeTree" type="Tree" parent="AnnotationPanelContainer/MarginContainer/HSplitContainer/ScrpitListHSplit/PanelContainer2/MarginContainer/VBoxContainer/PanelContainer/MarginContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PanelContainer" type="PanelContainer" parent="AnnotationPanelContainer/MarginContainer/HSplitContainer"]
visible = false
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_hmdan")

[node name="MarginContainer" type="MarginContainer" parent="AnnotationPanelContainer/MarginContainer/HSplitContainer/PanelContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="AnnotationPanelContainer/MarginContainer/HSplitContainer/PanelContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TitleLabel" type="Label" parent="AnnotationPanelContainer/MarginContainer/HSplitContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "类型过滤器"
label_settings = SubResource("LabelSettings_hmdan")
horizontal_alignment = 1
vertical_alignment = 1

[node name="EX_Control" type="Control" parent="AnnotationPanelContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="SettingPanelContainer" type="PanelContainer" parent="."]
unique_name_in_owner = true
layout_mode = 2
metadata/_tab_index = 1

[node name="MarginContainer" type="MarginContainer" parent="SettingPanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = -2
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = -2

[node name="HBoxContainer" type="HBoxContainer" parent="SettingPanelContainer/MarginContainer"]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="SettingPanelContainer/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_hmdan")

[node name="MarginContainer" type="MarginContainer" parent="SettingPanelContainer/MarginContainer/HBoxContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="ScrollContainer" type="ScrollContainer" parent="SettingPanelContainer/MarginContainer/HBoxContainer/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="SettingPanelContainer/MarginContainer/HBoxContainer/PanelContainer/MarginContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Button" type="Button" parent="SettingPanelContainer/MarginContainer/HBoxContainer/PanelContainer/MarginContainer/ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
text = "界面显示设置"
alignment = 0

[node name="Button2" type="Button" parent="SettingPanelContainer/MarginContainer/HBoxContainer/PanelContainer/MarginContainer/ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
text = "搜索与过滤"
alignment = 0

[node name="Button3" type="Button" parent="SettingPanelContainer/MarginContainer/HBoxContainer/PanelContainer/MarginContainer/ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
text = "文件黑名单"
alignment = 0

[node name="Button4" type="Button" parent="SettingPanelContainer/MarginContainer/HBoxContainer/PanelContainer/MarginContainer/ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
text = "恢复默认设置"
alignment = 0

[node name="Button7" type="Button" parent="SettingPanelContainer/MarginContainer/HBoxContainer/PanelContainer/MarginContainer/ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
text = "插件主题设置"
alignment = 0

[node name="Button5" type="Button" parent="SettingPanelContainer/MarginContainer/HBoxContainer/PanelContainer/MarginContainer/ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
text = "更新日志"
alignment = 0

[node name="Button6" type="Button" parent="SettingPanelContainer/MarginContainer/HBoxContainer/PanelContainer/MarginContainer/ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
text = "错误提交"
alignment = 0

[node name="PanelContainer2" type="PanelContainer" parent="SettingPanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_hmdan")

[node name="MarginContainer" type="MarginContainer" parent="SettingPanelContainer/MarginContainer/HBoxContainer/PanelContainer2"]
layout_mode = 2

[node name="PanelContainer3" type="PanelContainer" parent="SettingPanelContainer/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_hmdan")

[node name="MarginContainer" type="MarginContainer" parent="SettingPanelContainer/MarginContainer/HBoxContainer/PanelContainer3"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="ScrollContainer" type="ScrollContainer" parent="SettingPanelContainer/MarginContainer/HBoxContainer/PanelContainer3/MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="SettingPanelContainer/MarginContainer/HBoxContainer/PanelContainer3/MarginContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="IconTexture" type="TextureRect" parent="SettingPanelContainer/MarginContainer/HBoxContainer/PanelContainer3/MarginContainer/ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("2_a6d4f")
expand_mode = 1
stretch_mode = 5

[node name="Label" type="Label" parent="SettingPanelContainer/MarginContainer/HBoxContainer/PanelContainer3/MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "插件信息"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="SettingPanelContainer/MarginContainer/HBoxContainer/PanelContainer3/MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "开发者：DeerLuuu"
vertical_alignment = 1

[node name="Label3" type="Label" parent="SettingPanelContainer/MarginContainer/HBoxContainer/PanelContainer3/MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "图标：猫"
vertical_alignment = 1

[node name="Button6" type="Button" parent="SettingPanelContainer/MarginContainer/HBoxContainer/PanelContainer3/MarginContainer/ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
text = "赞助我们"
alignment = 0

[node name="Label5" type="Label" parent="SettingPanelContainer/MarginContainer/HBoxContainer/PanelContainer3/MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "版本：v1.0.5"
vertical_alignment = 1

[node name="Label4" type="Label" parent="SettingPanelContainer/MarginContainer/HBoxContainer/PanelContainer3/MarginContainer/ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(180, 0)
layout_mode = 2
text = "插件简介：
1、实现了所有脚本的读取
2、实现了脚本分组（是否收藏脚本）
3、实现了脚本中的注释扫描（所有包含关键字的注释会被添加到注释界面进行显示，显示内容包含行数、关键字、具体注释内容）
4、实现了右键脚本树中的脚本时的右键菜单，包含收藏、取消收藏、打开脚本、取消
5、实现了双击脚本树中的脚本来打开脚本
6、单击脚本树中的脚本将会把注释界面中的注释进行过滤，仅显示当前显示的脚本的注释
7、单击注释界面中的脚本名可以打开对应脚本
8、单击注释界面中的注释可以打开对应脚本并跳转到对应行数
9、注释搜索功能（允许全字匹配搜索和不区分大小写搜索）"
vertical_alignment = 1
autowrap_mode = 3
